--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 <div class="card">
     <div class="search">
         <input type="text" placeholder="Enter City name" spellcheck="false">
-        <button><img src="images/search.png"></button>
+        <button><img src="search.png"></button>
     </div>
     <div class="error">
         <p>Invalid City Name</p>
     </div>
     <div class="weather">
-        <img src="images/rain.png" class="weather-icon">
+        <img src="rain.png" class="weather-icon">
         <h1 class="temp">22°C</h1>
         <h2 class="city">Bandung</h2>
         <div class="details">
             <div class="col">
-                <img src="images/humidity.png">
+                <img src="humidity.png">
                 <div>
                     <p class="humidity">50%</p>
                     <p>humidity</p>
                 </div>
             </div>
             <div class="col">
-                <img src="images/wind.png">
+                <img src="wind.png">
                 <div>
                     <p class="wind">15Km/h</p>
                     <p>Wind Speed</p>
@@ -68,19 +68,19 @@ async function checkWeather(city){
     
 
     if(data.weather[0].main == "Clouds"){
-        weatherIcon.src = "images/clouds.png";
+        weatherIcon.src = "clouds.png";
     }
     else if(data.weather[0].main == "Clear"){
-        weatherIcon.src = "images/clear.png";
+        weatherIcon.src = "clear.png";
     }
     else if(data.weather[0].main == "Rain"){
-        weatherIcon.src = "images/rain.png";
+        weatherIcon.src = "rain.png";
     }
     else if(data.weather[0].main == "Drizzle"){
-        weatherIcon.src = "images/drizzle.png";
+        weatherIcon.src = "drizzle.png";
     }
     else if(data.weather[0].main == "Mist"){
-        weatherIcon.src = "images/mist.png";
+        weatherIcon.src = "mist.png";
     }
 
     document.querySelector(".weather").style.display = "block";
